# weft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt  device.cc  device.h  kernel.cc  kernel.h  main.cc  memory.cc  memory.h  scheduler.cc  scheduler.h  server.cc  server.h
frontend/: CMakeLists.txt  client.cc  client.h  libcuhook.cc  libcuhook.h  libweft.cc  weft_kernel_parser.flex
frontend/nvrtc/: kernel_parser.cc  kernel_parser.h
protos/: CMakeLists.txt  weft.proto
tests/vectorAdd_nvrtc/: Makefile  vectorAdd.cpp  vectorAdd_kernel.cu
